# mydylms-client

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  README.md  SECURITY.md  app.py  docker-compose.yaml  launcher.py  main.py  readme.md  render.yaml  requirements-dev.txt  requirements.txt  vercel.json  web.py  winx64.spec
.mcp/: servers.json
api/: README.md  attendance.py  auth.py  course.py  document.py  semester.py  system.py
app/: main.py
backend/: .env.example  .gitignore  Makefile  README.md  desktop.py  pyproject.toml  requirements.txt  web.py
backend/app/: main.py
backend/app/core/: config.py  http.py  utils.py
backend/app/routes/: annoucement.py  attendance.py  auth.py  calendar.py  content.py  system.py  user.py
backend/app/schemas/: announcement.py  attendance.py  auth.py  calendar.py  content.py  user.py
backend/app/services/: annoucements.py  attendance.py  auth.py  calendar.py  content.py  user.py
core/: attendance.py  auth.py  cache.py  course.py  docs.py  exceptions.py  info.py  logging_config.py  utils.py
docs/: api.md  frontend.md  mcp.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  readme.md  vite.config.ts
mydylms-api/: .gitignore  Dockerfile  README.md  api.py  app.py  readme.md  requirements.txt
mydylms-frontend/: .gitignore  index.html  readme.md
requirements/: base.txt  dev.txt
schema/: pydantic_auth.py  pydantic_semester.py
specs/: linux_x86_64.spec  mac_arm64.spec  win_64.spec  win_x64.spec
test/: test_auth_api.py  test_document_api.py  (+2 more)
(+103 files in other folders)
