[project]
name = "mydylms-client"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.139.0",
    "fastapi-mcp>=0.4.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
desktop = [
    "pyqt6>=6.11.0; sys_platform == 'linux'",
    "pyqt6-webengine>=6.11.0; sys_platform == 'linux'",
    "pyside6>=6.11.1; sys_platform == 'darwin'",
    "pywebview>=6.2.1",
    "qtpy>=2.4.3",
]
